--- a/school-management/src/assets/i18n/ar.json
+++ b/school-management/src/assets/i18n/ar.json
@@ -5,7 +5,7 @@
     "ABOUT": "حولنا",
     "CURRICULUM": "المنهج",
     "FACILITIES": "المرافق",
-    "JOIN_US": "انضم إلينا"
+    "JOIN_US": "تحميل"
   },
   "HERO": {
     "TITLE": "حيث كل طفل",
@@ -121,7 +121,7 @@
     "PRE_KG": "ما قبل الروضة",
     "KG1": "الروضة الأولى",
     "KG2": "الروضة الثانية",
-    "FORM_TITLE": "نموذج الاستفسار",
+    "FORM_TITLE": "نموذج الاتصال",
     "PARENT_NAME": "اسم ولي الأمر",
     "CHILD_AGE": "عمر الطفل",
     "EMAIL_ADDRESS": "عنوان البريد الإلكتروني",
