changes in frontend

--- a/school-management/src/assets/i18n/ar.json
+++ b/school-management/src/assets/i18n/ar.json
@@ -20,15 +20,18 @@
     "TITLE": "ترحيب المديرة",
     "GREETING": "أعزائي أولياء الأمور والأوصياء،",
     "INTRO": "يسعدني أن أرحب بكم نيابة عن <strong>روضة أبد الشمس</strong>. نحن ندرك أهمية التعليم المبكر وتأثيره الدائم على نمو الطفل.",
-    "APPROACH_TITLE": "نهجنا التعليمي",
-    "APPROACH_TEXT": "نقدم <span class=\"highlight\">فصول الحضانة ورياض الأطفال</span> المصممة خصيصاً لتلبية الاحتياجات والاهتمامات الفريدة للمتعلمين الصغار. منهجنا المثري يتبنى الاتجاهات التعليمية الحديثة ويزود الأطفال بالمهارات للازدهار في عالم متغير.",
-    "TEAM_TITLE": "فريقنا المتفاني",
-    "TEAM_TEXT": "ما يميزنا هو فريقنا المتفاني من <span class=\"highlight\">المعلمات المدربات تدريباً عالياً والمهتمات</span>. يجلبن ثروة من الخبرة في تعليم الطفولة المبكرة وملتزمات برعاية نقاط القوة والمواهب الفردية لكل طفل. نؤمن أن كل طفل فريد ويستحق الفرص للاستكشاف والإبداع والنمو في بيئة داعمة وشاملة.",
-    "ENVIRONMENT_TITLE": "بيئة التعلم لدينا",
-    "ENVIRONMENT_TEXT": "نفتخر كثيراً بمرافقنا وبيئة التعلم. <span class=\"highlight\">فصولنا الدراسية الحديثة</span> مصممة بعناية لتوفير تجارب تعلم غامرة وجذابة. السلامة أولوية قصوى؛ نضمن حرماً آمناً ونظيفاً حيث يمكن للأطفال الازدهار والاستمتاع بوقتهم معنا.",
+    "PREVIEW": "لهذا الغرض، نقدم فصول الحضانة ورياض الأطفال المصممة خصيصاً لتلبية الاحتياجات والاهتمامات الفريدة للمتعلمين الصغار. منهجنا المثري يتبنى الاتجاهات التعليمية الحديثة ويزود الأطفال بالمهارات للازدهار في عالم متغير.",
+    "APPROACH_TITLE": "فريقنا المتفاني",
+    "APPROACH_TEXT": "ما يميزنا هو فريقنا المتفاني من <span class=\"highlight\">المعلمات المدربات تدريباً عالياً والمهتمات</span>. يجلبن ثروة من الخبرة في تعليم الطفولة المبكرة وملتزمات برعاية نقاط القوة والمواهب الفردية لكل طفل. نؤمن أن كل طفل فريد ويستحق الفرص للاستكشاف والإبداع والنمو في بيئة داعمة وشاملة.",
+    "TEAM_TITLE": "بيئة التعلم لدينا",
+    "TEAM_TEXT": "نفتخر كثيراً بمرافقنا وبيئة التعلم. <span class=\"highlight\">فصولنا الدراسية الحديثة</span> مصممة بعناية لتوفير تجارب تعلم غامرة وجذابة. السلامة أولوية قصوى؛ نضمن حرماً آمناً ونظيفاً حيث يمكن للأطفال الازدهار والاستمتاع بوقتهم معنا.",
+    "ENVIRONMENT_TITLE": "نهجنا التعليمي",
+    "ENVIRONMENT_TEXT": "نستخدم <span class=\"highlight\">نهجاً قائماً على اللعب</span> متأثراً بطرق مونتيسوري وريجيو إميليا لتعزيز الإبداع والاستقلالية. تساعد هذه المنهجية الأطفال على تطوير مهارات التفكير النقدي مع الحفاظ على فضولهم الطبيعي وحبهم للتعلم.",
     "METHODOLOGY_TEXT": "نستخدم <strong>نهجاً قائماً على اللعب</strong> متأثراً بـ <em>طرق مونتيسوري وريجيو إميليا</em> لتعزيز الإبداع والاستقلالية.",
     "CLOSING": "ندعوكم للانضمام إلى مجتمعنا المترابط وائتمانا على رحلة التعلم المبكر لطفلكم. نحن ملتزمون بوضع أساس قوي لنجاح طفلكم الصغير في المستقبل.",
     "CONTACT_NOTE": "إذا كان لديكم أي أسئلة أو تحتاجون لمزيد من المعلومات، فريقنا الإداري الودود هنا للمساعدة. نتطلع لترحيبكم وطفلكم في <strong>روضة أبد الشمس</strong> والشروع في هذه الرحلة التعليمية المثرية معاً.",
+    "SHOW_MORE": "عرض المزيد",
+    "SHOW_LESS": "عرض أقل",
     "VISION_TITLE": "رؤيتنا",
     "VISION_TEXT": "تحويل تعليم الطفولة المبكرة من خلال رعاية العقول الصغيرة في بيئة محبة ومبتكرة.",
     "MISSION_TITLE": "مهمتنا",
