--- a/school-management/src/assets/i18n/en.json
+++ b/school-management/src/assets/i18n/en.json
@@ -20,15 +20,18 @@
     "TITLE": "Principal's Welcome",
     "GREETING": "Dear Parents and Guardians,",
     "INTRO": "I am delighted to welcome you on behalf of <strong>Abad Alshams Kindergarten</strong>. We understand the significance of early education and its lasting impact on a child's development.",
-    "APPROACH_TITLE": "Our Educational Approach",
-    "APPROACH_TEXT": "We offer <span class=\"highlight\">Nursery and KG classes</span> tailored to the unique needs and interests of young learners. Our enriched curriculum embraces modern educational trends and equips children with the skills to thrive in an ever-changing world.",
-    "TEAM_TITLE": "Our Dedicated Team",
-    "TEAM_TEXT": "What sets us apart is our dedicated team of <span class=\"highlight\">highly trained and caring teachers</span>. They bring a wealth of experience in early childhood education and are committed to nurturing each child's individual strengths and talents. We believe every child is unique and deserves opportunities to explore, create, and grow in a supportive and inclusive environment.",
-    "ENVIRONMENT_TITLE": "Our Learning Environment",
-    "ENVIRONMENT_TEXT": "We take great pride in our facilities and learning environment. Our <span class=\"highlight\">state-of-the-art classrooms</span> are thoughtfully designed to provide immersive, engaging learning experiences. Safety is a top priority; we ensure a secure, clean campus where children can flourish and enjoy their time with us.",
+    "PREVIEW": "To that end, we offer Nursery and KG classes tailored to the unique needs and interests of young learners. Our enriched curriculum embraces modern educational trends and equips children with the skills to thrive in an ever-changing world.",
+    "APPROACH_TITLE": "Our Dedicated Team",
+    "APPROACH_TEXT": "What sets us apart is our dedicated team of <span class=\"highlight\">highly trained and caring teachers</span>. They bring a wealth of experience in early childhood education and are committed to nurturing each child's individual strengths and talents. We believe every child is unique and deserves opportunities to explore, create, and grow in a supportive and inclusive environment.",
+    "TEAM_TITLE": "Our Learning Environment",
+    "TEAM_TEXT": "We take great pride in our facilities and learning environment. Our <span class=\"highlight\">state-of-the-art classrooms</span> are thoughtfully designed to provide immersive, engaging learning experiences. Safety is a top priority; we ensure a secure, clean campus where children can flourish and enjoy their time with us.",
+    "ENVIRONMENT_TITLE": "Our Educational Approach",
+    "ENVIRONMENT_TEXT": "We employ a <span class=\"highlight\">play-based approach</span> influenced by Montessori and Reggio Emilia methods to foster creativity and independence. This methodology helps children develop critical thinking skills while maintaining their natural curiosity and love for learning.",
     "METHODOLOGY_TEXT": "We employ a <strong>play-based approach</strong> influenced by <em>Montessori and Reggio Emilia methods</em> to foster creativity and independence.",
     "CLOSING": "We invite you to become part of our close-knit community and entrust us with your child's early learning journey. We are committed to laying a strong foundation for your little one's future success.",
     "CONTACT_NOTE": "Should you have any questions or need more information, our friendly administrative team is here to help. We look forward to welcoming you and your child to <strong>Abad Alshams Kindergarten</strong> and embarking on this enriching educational journey together.",
+    "SHOW_MORE": "Show More",
+    "SHOW_LESS": "Show Less",
     "VISION_TITLE": "Our Vision",
     "VISION_TEXT": "To transform early childhood education by nurturing young minds in a loving and innovative environment.",
     "MISSION_TITLE": "Our Mission",
@@ -173,7 +176,7 @@
     "REGISTRATION_LIST": [
       "Academic Session: Our school year runs from September through June.",
       "Eligibility: Children age 3, 4 and 5 are eligible for admission in Nursery, KG-1, and KG-2. Please provide proof of age (birth certificate or passport) when applying.",
-      "Required Documents: At registration, parents must submit documents as requested at the time of registration. Any relevant legal documents (custody papers, etc.) should also be provided.",
+      "Required Documents: At registration, parents must submit asked at the time of registration. Any relevant legal documents (custody papers, etc.) should also be provided.",
       "Registration Process: Registration dates and times will be announced on our website and social media. Parents should visit the school during these periods to complete paperwork. We recommend scheduling an appointment to ensure prompt service.",
       "Class Assignment: Students are assigned to classes based on factors like age, class size, and available resources. The administration may adjust placements to balance student-to-teacher ratios.",
       "Late Registration: If you register after the official period, please contact the school office for availability and any additional requirements.",
@@ -185,7 +188,7 @@
     "FEES_INTRO": "Our fee structure is transparent and designed for convenience:",
     "FEES_LIST": [
       "Tuition is charged on a monthly, termly, or annual basis (as per the school's current policy). Payment schedules and amounts will be communicated to parents before enrollment and in accordance with Ministry of Education regulations.",
-      "Payment Methods: We accept cash, cheques, and online bank transfers. Detailed payment instructions will be provided to parents each term.",
+      "Payment Methods: We accept cash, Cheques, and online bank transfers. Detailed payment instructions will be provided to parents each term.",
       "Withdrawal Refunds: Parents are requested to read refund policy, which has been communicated separately on the registration form. The registration fee remains non-refundable.",
       "Sibling Discounts: We offer tuition discounts for siblings. Details of any applicable discount will be provided in the fee schedule shared with parents."
     ],
