--- a/school-management/src/assets/i18n/ar.json
+++ b/school-management/src/assets/i18n/ar.json
@@ -5,6 +5,7 @@
     "ABOUT": "حولنا",
     "CURRICULUM": "المنهج",
     "FACILITIES": "المرافق",
+    "GALLERY": "معرض الصور",
     "JOIN_US": "تحميل"
   },
   "HERO": {
