--- a/school-management/src/assets/i18n/en.json
+++ b/school-management/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
     "ABOUT": "About",
     "CURRICULUM": "Curriculum",
     "FACILITIES": "Facilities",
+    "GALLERY": "Gallery",
     "JOIN_US": "DOWNLOAD"
   },
   "HERO": {
